--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean:dist": "rimraf dist",
+    "task1": "npm run clean:dist && tsc src/hw-1/task1.ts --outDir dist && nodemon dist/task1.js",
+    "task2": "npm run clean:dist && tsc --esModuleInterop src/hw-1/task2.ts --outDir dist && nodemon dist/task2.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +24,8 @@
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "csvtojson": "^2.0.10"
   }
 }
