--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,18 @@
 {
     "include": ["src"],
-    "exclude": ["node_modules"],
+    "exclude": ["node_modules", "**/*.spec.ts"],
     "compilerOptions": {
         "outDir": "dist",
         "moduleResolution": "node",
-        "module": "esnext",
-        "target": "es5",
+        "module": "ES2015",
+        "target": "ES2015",
         "lib": ["es5", "es6", "dom"],
         "sourceMap": true,
         "allowSyntheticDefaultImports": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "declaration": true,
+        "emitDeclarationOnly": true,
+        "esModuleInterop": true
     }
 }
