--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean:dist": "rimraf dist",
-    "task1": "npm run clean:dist && tsc src/hw-1/task1.ts --outDir dist && nodemon dist/task1.js",
-    "task2": "npm run clean:dist && tsc --esModuleInterop src/hw-1/task2.ts --outDir dist && nodemon dist/task2.js"
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint --fix . --ext .ts",
+    "task1:1": "npm run clean:dist && tsc src/hw-1/task1.ts --outDir dist && nodemon dist/task1.js",
+    "task1:2": "npm run clean:dist && tsc --esModuleInterop src/hw-1/task2.ts --outDir dist && nodemon dist/task2.js",
+    "task2": "npm run clean:dist && npm run lint && tsc --esModuleInterop src/hw-2/index.ts --outDir dist && nodemon dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,12 +23,25 @@
   },
   "homepage": "https://github.com/SobollEva/nodejs-epm-2024#readme",
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/hapi__joi": "^17.1.14",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "eslint": "^8.56.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^3.0.2",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "csvtojson": "^2.0.10"
+    "@hapi/joi": "^17.1.1",
+    "csvtojson": "^2.0.10",
+    "express": "^4.18.2",
+    "express-joi-validation": "^5.0.1",
+    "uuid": "^9.0.1"
   }
 }
